# clonk3

./: .gitignore  CMakeLists.txt  Makefile  README.md
Content DE/: C3RTITLE.GRP  MISSIONS.SCR
Port/: RandomWrapper.cpp  SDLSound.cpp  SDLmain.cpp  UserInput.cpp  VGA4.CPP  vga4.cpp  vga4.h
Source/: BPL.LIB  BSCONSYS.CPP  BSEXCSYS.CPP  BSEXCSYS.H  BSGFXSYS.CPP  BSGFXSYS.H  BSMANSYS.CPP  BSMANSYS.H  BSPXSSYS.CPP  BSPXSSYS.H  BSSCRSYS.CPP  BSSCRSYS.H  BSSTRSYS.CPP  BSSTRSYS.H  BSVHCSYS.CPP  BSVHCSYS.H  BSWEASYS.CPP  C3BATSEQ.AGC  C3DEFACE.AGC  C3HTITLE.PCX  C3LTITLE.AGC  C3MENU1.AGC  C3MENU2.AGC  C3REDWLF.AGC  CLONK.CPP  CLONK.DSK  CLONK.H  CLONK.PRJ  CLONK.cpp  CLONK3.HLP  CLONK3.txt  CLONKAUX.CPP  CLONKAUX.cpp  CLONK_BS.H  CLONK_BS.h  CLONK_SC.h  CMakeLists.txt  CT-VOICE.CPP  CT-VOICE.H  DSP-DTSS.CPP  (+42 more)
content/: C3RGRAFX.GRP  C3RTITLE.GRP
content-de/: C3RGRAFX.GRP  C3RSOUND.GRP  CLONK3.HLP
manifest/: CMakeLists.txt
src/: CMakeLists.txt  bsconsys.cpp  bsexcsys.cpp  bsgfxsys.cpp  bsmansys.cpp  bspxssys.cpp  bsscrsys.cpp  bsstrsys.cpp  bsvhcsys.cpp  clonk.cpp  clonkaux.cpp  ct-voice.cpp  ct-voice.h  dsp-dtss.cpp  dsp-dtss.h  intro.cpp  standard.cpp  standard.h  std_gfx.cpp  std_gfx.h  stdfile.cpp  stdfile.h  svi20.cpp  svi20ext.h
src/port/: CMakeLists.txt  RandomWrapper.h  SDLSound.cpp  SDLSound.h  SDLmain.cpp  SDLmain.h  Scaling.cpp  Scaling.h  UserInput.cpp  UserInput.h  vga4.cpp
